@startuml GoFit_ERD_02_Workouts
!pragma layout smetana
title ERD - Workouts, exercise library, sessions (public)

hide circle
skinparam linetype ortho

class "auth.users" as u <<auth>> {
  id : uuid PK
}

class "exercises" as e <<Table>> {
  id : uuid PK
  name
  category
  muscle_group
}

class "workouts" as w <<Table>> {
  id : uuid PK
  user_id : uuid FK? (null = native)
  name
  workout_type
}

class "workout_exercises" as we <<Table>> {
  id : uuid PK
  workout_id : uuid FK
  exercise_id : uuid FK
  sets / reps / rest_time
  exercise_order
}

class "workout_sessions" as ws <<Table>> {
  id : uuid PK
  user_id : uuid FK
  workout_id : uuid FK
  date
  started_at / completed_at
  exercises_completed JSONB
  duration_minutes
}

u ||--o{ w : custom owner
u ||--o{ ws
e ||--o{ we
w ||--o{ we
w ||--o{ ws

note bottom of w
  Current ERD uses the unified model.
  Legacy native_* / custom_* tables were migration sources
  and are not part of the current academic model.
end note

@enduml
